-- SQL dump generated using DBML (dbml.dbdiagram.io)
-- Database: PostgreSQL
-- Generated at: 2024-09-12T10:11:50.448Z
CREATE TYPE "submission_status_enum" AS ENUM (
  'awaiting',
  'pending',
  'approved',
  'rejected'
);

CREATE TYPE "difficulty_enum" AS ENUM ('easy', 'medium', 'hard');

CREATE TABLE "moderators" (
  "id" varchar PRIMARY KEY,
  "avatar_url" varchar,
  "first_name" varchar NOT NULL,
  "last_name" varchar NOT NULL,
  "username" varchar UNIQUE NOT NULL,
  "email" varchar UNIQUE NOT NULL,
  "password" varchar NOT NULL,
  "is_admin" bool NOT NULL DEFAULT false,
  "is_active" bool NOT NULL DEFAULT true,
  "created_at" timestamptz DEFAULT (now()),
  "updated_at" timestamptz DEFAULT (now())
);

CREATE TABLE "mod_country_preferences" (
  "moderator_id" varchar NOT NULL,
  "country_id" int NOT NULL,
  PRIMARY KEY ("moderator_id", "country_id")
);

CREATE TABLE "categories" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar NOT NULL,
  "created_at" timestamptz DEFAULT (now()),
  "updated_at" timestamptz DEFAULT (now())
);

CREATE TABLE "countries" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar NOT NULL,
  "created_at" timestamptz DEFAULT (now()),
  "updated_at" timestamptz DEFAULT (now())
);

CREATE TABLE "submissions" (
  "id" varchar PRIMARY KEY,
  "question" text UNIQUE NOT NULL,
  "status" submission_status_enum NOT NULL DEFAULT 'pending',
  "moderator_id" varchar,
  "difficulty" difficulty_enum NOT NULL,
  "submission_note" text,
  "created_at" timestamptz DEFAULT (now()),
  "updated_at" timestamptz DEFAULT (now())
);

CREATE TABLE "submission_options" (
  "id" varchar PRIMARY KEY NOT NULL,
  "submission_id" varchar NOT NULL,
  "content" text NOT NULL,
  "is_correct" bool NOT NULL DEFAULT false,
  "created_at" timestamptz DEFAULT (now()),
  "updated_at" timestamptz DEFAULT (now())
);

CREATE TABLE "trivias" (
  "id" varchar PRIMARY KEY NOT NULL,
  "question" text UNIQUE NOT NULL,
  "difficulty" difficulty_enum NOT NULL,
  "submission_id" varchar,
  "created_at" timestamptz DEFAULT (now()),
  "updated_at" timestamptz DEFAULT (now())
);

CREATE TABLE "trivia_options" (
  "id" varchar PRIMARY KEY NOT NULL,
  "trivia_id" varchar NOT NULL,
  "content" text NOT NULL,
  "is_correct" bool NOT NULL DEFAULT false,
  "created_at" timestamptz DEFAULT (now()),
  "updated_at" timestamptz DEFAULT (now())
);

CREATE TABLE "categories_trivias" (
  "category_id" int NOT NULL,
  "trivia_id" varchar NOT NULL,
  PRIMARY KEY ("category_id", "trivia_id")
);

CREATE TABLE "countries_trivias" (
  "country_id" int NOT NULL,
  "trivia_id" varchar NOT NULL,
  PRIMARY KEY ("country_id", "trivia_id")
);

CREATE TABLE "categories_submissions" (
  "category_id" int NOT NULL,
  "submission_id" varchar NOT NULL,
  PRIMARY KEY ("category_id", "submission_id")
);

CREATE TABLE "countries_submissions" (
  "country_id" int NOT NULL,
  "submission_id" varchar NOT NULL,
  PRIMARY KEY ("country_id", "submission_id")
);

COMMENT ON TABLE "moderators" IS 'This table keeps a record of all mods for the api. A mod can be an admin.';

COMMENT ON TABLE "mod_country_preferences" IS 'This table links moderators to their preferred country[ies]';

COMMENT ON TABLE "categories" IS 'This stores a list of all possible trivia categories';

COMMENT ON TABLE "countries" IS 'This table holds all African countries';

COMMENT ON TABLE "submissions" IS 'This holds all questions from user submissions';

COMMENT ON TABLE "submission_options" IS 'This holds all options from user submissions';

COMMENT ON TABLE "trivias" IS 'This table holds all questions in the trivia db';

COMMENT ON TABLE "trivia_options" IS 'This table holds all options in the trivia db';

ALTER TABLE
  "mod_country_preferences"
ADD
  FOREIGN KEY ("country_id") REFERENCES "countries" ("id");

ALTER TABLE
  "mod_country_preferences"
ADD
  FOREIGN KEY ("moderator_id") REFERENCES "moderators" ("id") ON DELETE CASCADE;

ALTER TABLE
  "submissions"
ADD
  FOREIGN KEY ("moderator_id") REFERENCES "moderators" ("id");

ALTER TABLE
  "submission_options"
ADD
  FOREIGN KEY ("submission_id") REFERENCES "submissions" ("id") ON DELETE CASCADE;

ALTER TABLE
  "trivias"
ADD
  FOREIGN KEY ("submission_id") REFERENCES "submissions" ("id");

ALTER TABLE
  "trivia_options"
ADD
  FOREIGN KEY ("trivia_id") REFERENCES "trivias" ("id") ON DELETE CASCADE;

ALTER TABLE
  "categories_trivias"
ADD
  FOREIGN KEY ("category_id") REFERENCES "categories" ("id");

ALTER TABLE
  "categories_trivias"
ADD
  FOREIGN KEY ("trivia_id") REFERENCES "trivias" ("id") ON DELETE CASCADE;

ALTER TABLE
  "countries_trivias"
ADD
  FOREIGN KEY ("country_id") REFERENCES "countries" ("id");

ALTER TABLE
  "countries_trivias"
ADD
  FOREIGN KEY ("trivia_id") REFERENCES "trivias" ("id") ON DELETE CASCADE;

ALTER TABLE
  "categories_submissions"
ADD
  FOREIGN KEY ("category_id") REFERENCES "categories" ("id");

ALTER TABLE
  "categories_submissions"
ADD
  FOREIGN KEY ("submission_id") REFERENCES "submissions" ("id") ON DELETE CASCADE;

ALTER TABLE
  "countries_submissions"
ADD
  FOREIGN KEY ("country_id") REFERENCES "countries" ("id");

ALTER TABLE
  "countries_submissions"
ADD
  FOREIGN KEY ("submission_id") REFERENCES "submissions" ("id") ON DELETE CASCADE;