// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs
Project afrivia {
  database_type: 'Postgresql'
  Note: 'Afrivia Database'
}

Table moderators {
  id varchar [pk]
  avatar_url varchar
  first_name varchar [not null]
  last_name varchar [not null]
  username varchar [unique, not null]
  email varchar [unique, not null]
  password varchar [not null]
  is_admin bool [default: false, not null]
  is_active bool [default: true, not null]

  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]

  Note {
    'This table keeps a record of all mods for the api. A mod can be an admin.'
  }
}

Table mod_country_preferences {
  moderator_id varchar [not null]
  country_id int [ref: > countries.id, not null]
  Note {
    'This table links moderators to their preferred country[ies]'
  }
  indexes {
    (moderator_id, country_id) [pk]
  }
}

Ref: mod_country_preferences.moderator_id > moderators.id [delete: cascade]


Table categories {
  id int [pk, increment]
  name varchar [not null]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]

  Note {
    'This stores a list of all possible trivia categories'
  }
}

Table countries {
  id int [pk, increment] 
  name varchar [not null]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]

  Note {
    'This table holds all African countries'
  }
}


enum submission_status_enum {
  awaiting
  pending
  approved
  rejected
}

enum difficulty_enum {
  easy
  medium
  hard
}

Table submissions {
  id varchar [pk]
  question text [not null, unique]
  status submission_status_enum [not null, default: 'pending']
  moderator_id varchar [ref: > moderators.id, null]
  difficulty difficulty_enum [not null] 
  submission_note text [null]

  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]

  Note {
    'This holds all questions from user submissions'
  }
}

Table submission_options {
  id varchar [pk, not null]
  submission_id varchar [not null]
  content text [not null]
  is_correct bool [default: false, not null]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]

    Note {
    'This holds all options from user submissions'
  }
}
Ref: submission_options.submission_id > submissions.id [delete: cascade]

Table trivias {
  id varchar [pk, not null]
  question text [not null, unique]
  difficulty difficulty_enum [not null]
  submission_id varchar [ref: > submissions.id]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]

  Note {
    'This table holds all questions in the trivia db'
  }
}


Table trivia_options {
  id varchar [pk, not null]
  trivia_id varchar [not null]
  content text [not null]
  is_correct bool [default: false, not null]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]

  Note {
    'This table holds all options in the trivia db'
  }
}

Ref: trivia_options.trivia_id > trivias.id [delete: cascade]


Table categories_trivias {
  category_id int [ref: > categories.id, not null]
  trivia_id varchar [not null]

  indexes {
    (category_id, trivia_id) [pk]
  }
}

Ref: categories_trivias.trivia_id > trivias.id [delete: cascade]


Table countries_trivias {
  country_id int [ref: > countries.id, not null]
  trivia_id varchar [not null]

  indexes {
    (country_id, trivia_id) [pk]
  }
}

Ref: countries_trivias.trivia_id > trivias.id [delete: cascade]


Table categories_submissions {
  category_id int [ref: > categories.id, not null]
  submission_id varchar [not null]

  indexes {
    (category_id, submission_id) [pk]
  }
}

Ref: categories_submissions.submission_id > submissions.id [delete: cascade]


Table countries_submissions {
  country_id int [ref: > countries.id, not null]
  submission_id varchar [not null]

  indexes {
    (country_id, submission_id) [pk]
  }
}

Ref: countries_submissions.submission_id > submissions.id [delete: cascade]

